타이머 기능 일부 구현

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
             <i class="fa-solid fa-clock"></i>
             <a href="#">타이머</a>
         </div>
+
         <ul class="navbar__menu">
             <li><a href="#">Report</a></li>
             <li><a href="#">Setting</a></li>
@@ -28,6 +29,20 @@
         <a href="#" class="navbar__toggleBtn">
             <i class="fa-solid fa-bars"></i>
         </a>
-    </nav>    
+    </nav>
+    
+    <section class="timer" id="work">
+        <div class="timer__clock">
+            25:00
+        </div>
+        <button class="timer__button">
+            <a href="#" class="timer__button__play">
+                <i class="fa-solid fa-play"></i>
+            </a>
+            <a href="#" class="timer__button__pause">
+                <i class="fa-solid fa-pause"></i>
+            </a>
+        </button>
+    </section>
 </body>
 </html>
