--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!-- Google Fonts CSS -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Jua&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Jua&family=Roboto+Mono:wght@500&display=swap" rel="stylesheet">
     
     <!-- My Files -->
     <link rel="stylesheet" href="style.css">
